--- a/config.toml
+++ b/config.toml
@@ -249,3 +249,125 @@ name = "Community"
     name = "Partner"
     URL = "partner"
     weight = 3
+
+
+
+[languages.tr]
+weight = 3
+contentDir = "content/tr"
+languageCode = "tr-TR"
+languageName = "Türk"
+
+[[languages.tr.menu.main]]
+weight = 1
+name = "Why KubeSphere"
+URL = "reason"
+
+[[languages.tr.menu.main]]
+weight = 2
+name = "Scenario"
+hasChildren = true
+
+  [[languages.tr.menu.main]]
+  parent = "Scenario"
+  name = "Multi-cluster"
+  URL = "multi-cluster"
+  weight = 1
+
+  [[languages.tr.menu.main]]
+  parent = "Scenario"
+  name = "DevOps"
+  URL = "devOps"
+  weight = 2
+
+  [[languages.tr.menu.main]]
+  parent = "Scenario"
+  name = "Network"
+  URL = "network"
+  weight = 3
+
+  [[languages.tr.menu.main]]
+  parent = "Scenario"
+  name = "Service Mesh"
+  URL = "service-mesh"
+  weight = 4
+
+  [[languages.tr.menu.main]]
+  parent = "Scenario"
+  name = "Storage"
+  URL = "storage"
+  weight = 5
+
+  [[languages.tr.menu.main]]
+  parent = "Scenario"
+  name = "AppStore"
+  URL = "app-store"
+  weight = 6
+
+  [[languages.tr.menu.main]]
+  parent = "Scenario"
+  name = "Multi-tenancy"
+  URL = "multi-tenancy"
+  weight = 7
+
+  [[languages.tr.menu.main]]
+  parent = "Scenario"
+  name = "Observability"
+  URL = "observability"
+  weight = 8
+
+[[languages.tr.menu.main]]
+weight = 3
+name = "Resources"
+hasChildren = true
+
+  [[languages.tr.menu.main]]
+  parent = "Resources"
+  name = "Open Source Projects"
+  URL = "projects"
+  weight = 1
+
+  [[languages.tr.menu.main]]
+  parent = "Resources"
+  name = "KubeCon & QCon"
+  URL = "conferences"
+  weight = 2
+
+  [[languages.tr.menu.main]]
+  parent = "Resources"
+  name = "Technology Blogs"
+  URL = "blogs"
+  weight = 3
+
+  [[languages.tr.menu.main]]
+  parent = "Resources"
+  name = "Video Resources"
+  URL = "videos"
+  weight = 4
+
+[[languages.tr.menu.main]]
+weight = 4
+name = "Documentation"
+URL = "docs"
+
+[[languages.tr.menu.main]]
+weight = 5
+hasChildren = true
+name = "Community"
+    [[languages.tr.menu.main]]
+    parent = "Community"
+    name = "Contribution"
+    URL = "contribution"
+    weight = 1
+
+    [[languages.tr.menu.main]]
+    parent = "Community"
+    name = "Case Studies"
+    URL = "case"
+    weight = 2
+
+    [[languages.tr.menu.main]]
+    parent = "Community"
+    name = "Partner"
+    URL = "partner"
+    weight = 3
