--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,6 @@
 
 [context.deploy-preview.environment]
   HUGO_VERSION = "0.70.0"
+
+[context.deploy-preview]
+command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
