--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -28,51 +28,21 @@ hasChildren = true
 
   [[languages.en.menu.main]]
   parent = "Scenario"
-  name = "Multi-cluster"
-  URL = "multi-cluster"
-  weight = 1
-
-  [[languages.en.menu.main]]
-  parent = "Scenario"
   name = "DevOps"
-  URL = "devOps"
-  weight = 2
-
-  [[languages.en.menu.main]]
-  parent = "Scenario"
-  name = "Network"
-  URL = "network"
-  weight = 3
+  URL = "dev-ops"
+  weight = 1
 
   [[languages.en.menu.main]]
   parent = "Scenario"
   name = "Service Mesh"
   URL = "service-mesh"
-  weight = 4
-
-  [[languages.en.menu.main]]
-  parent = "Scenario"
-  name = "Storage"
-  URL = "storage"
-  weight = 5
-
-  [[languages.en.menu.main]]
-  parent = "Scenario"
-  name = "AppStore"
-  URL = "app-store"
-  weight = 6
-
-  [[languages.en.menu.main]]
-  parent = "Scenario"
-  name = "Multi-tenancy"
-  URL = "multi-tenancy"
-  weight = 7
+  weight = 2
 
   [[languages.en.menu.main]]
   parent = "Scenario"
   name = "Observability"
   URL = "observability"
-  weight = 8
+  weight = 3
 
 [[languages.en.menu.main]]
 weight = 3
@@ -148,45 +118,15 @@ hasChildren = true
 
   [[languages.zh.menu.main]]
   parent = "Scenario"
-  name = "Multi-cluster"
-  URL = "multi-cluster"
-  weight = 1
-
-  [[languages.zh.menu.main]]
-  parent = "Scenario"
   name = "DevOps"
   URL = "devOps"
   weight = 2
 
   [[languages.zh.menu.main]]
   parent = "Scenario"
-  name = "Network"
-  URL = "network"
-  weight = 3
-
-  [[languages.en.menu.main]]
-  parent = "Scenario"
   name = "Service Mesh"
   URL = "service-mesh"
   weight = 4
-
-  [[languages.en.menu.main]]
-  parent = "Scenario"
-  name = "Storage"
-  URL = "storage"
-  weight = 5
-
-  [[languages.zh.menu.main]]
-  parent = "Scenario"
-  name = "AppStore"
-  URL = "app-store"
-  weight = 6
-
-  [[languages.zh.menu.main]]
-  parent = "Scenario"
-  name = "Multi-tenancy"
-  URL = "multi-tenancy"
-  weight = 7
 
   [[languages.zh.menu.main]]
   parent = "Scenario"
