--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -23,6 +23,8 @@ slackLink = "https://join.slack.com/t/kubesphere/shared_invite/enQtNTE3MDIxNzUxN
 youtubeLink = "https://www.youtube.com/channel/UCyTdUQUYjf7XLjxECx63Hpw"
 facebookLink = ""
 twitterLink = "https://twitter.com/KubeSphere"
+mediumLink = "https://itnext.io/@kubesphere"
+linkedinLink = "https://www.linkedin.com/company/kubesphere/"
 
 
 [languages.en]
