add dev-ops page

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -46,18 +46,21 @@ hasChildren = true
   [[languages.en.menu.main]]
   parent = "Scenario"
   name = "DevOps"
+  Title = "Embracing One-stop DevOps Workflow"
   URL = "dev-ops"
   weight = 1
 
   [[languages.en.menu.main]]
   parent = "Scenario"
   name = "Service Mesh"
+  Title = "Running Microservices on Kubernetes"
   URL = "service-mesh"
   weight = 2
 
   [[languages.en.menu.main]]
   parent = "Scenario"
   name = "Observability"
+  Title = "Building Cloud Native Observability"
   URL = "observability"
   weight = 3
 
