add video for observability
Signed-off-by: FeynmanZhou <pengfeizhou@yunify.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -14,7 +14,7 @@ title = "KubeSphere | Enterprise container platform, built on Kubernetes"
 description = "KubeSphere is an open source container platform based on Kubernetes for enterprise app development and deployment, suppors installing anywhere from on-premise datacenter to any cloud to edge."
 keywords = "KubeSphere, Kubernetes Dashboard,  Install Enterprise Kubernetes, DevOps, container platform"
 
-mailchimpSubscribeUrl = "https://gmail.us18.list-manage.com/subscribe/post?u=553ce463e00897cc36ed80866&id=f4b5009074"
+mailchimpSubscribeUrl = "https://kubesphere.us10.list-manage.com/subscribe/post?u=c85ea2b944b08b951f607bdd4&id=83f673a2d9"
 
 gcs_engine_id = "018068616810858123755%3Apb1pt8sx6ve"
 
