--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,9 +10,9 @@ baseURL = "https://hugo-first.netlify.app"
 [params]
 logo = "images/logo.svg"
 
-title = "KubeSphere | Enterprise container platform, built on Kubernetes"
-description = "KubeSphere is an open source container platform based on Kubernetes for enterprise app development and deployment, suppors installing anywhere from on-premise datacenter to any cloud to edge."
-keywords = "KubeSphere, Kubernetes Dashboard,  Install Enterprise Kubernetes, DevOps, container platform"
+title = "KubeSphere | The Kubernetes platform tailored for hybrid multicloud"
+description = "KubeSphere is a distributed operating system managing cloud native applications with Kubernetes as its kernel, and provides plug-and-play architecture for the seamless integration of third-party applications to boost its ecosystem."
+keywords = "KubeSphere, Kubernetes, container platform, DevOps, hybrid cloud, cloud native"
 
 mailchimpSubscribeUrl = "https://kubesphere.us10.list-manage.com/subscribe/post?u=c85ea2b944b08b951f607bdd4&id=83f673a2d9"
 
