--- a/data/zh/footer.yaml
+++ b/data/zh/footer.yaml
@@ -57,3 +57,5 @@ footer:
           link: https://github.com/kubesphere/kubesphere/blob/master/docs/roadmap.md
         - content: 中国站
           link: https://kubesphere.com.cn/
+        - content: 中文论坛
+          link: https://kubesphere.com.cn/forum
