--- a/data/zh/footer.yaml
+++ b/data/zh/footer.yaml
@@ -3,13 +3,13 @@ footer:
     - title: 应用场景
       list:
         - content: 拥抱一站式 DevOps
-          link: devops
+          link: devops/
 
         - content: 在 K8s 运行微服务
-          link: service-mesh
+          link: service-mesh/
 
         - content: 构建云原生可观察性
-          link: observability
+          link: observability/
 
         - content: 物理机 K8s 暴露服务
           link: 'https://porterlb.io'
@@ -26,13 +26,13 @@ footer:
     - title: 资源
       list:
         - content: 开源项目
-          link: projects
+          link: projects/
         - content: 技术博客
-          link: blogs
+          link: blogs/
         - content: 开源峰会
-          link: conferences
+          link: conferences/
         - content: 视频资源
-          link: videos
+          link: videos/
 
     - title: 文档中心
       list:
@@ -50,9 +50,9 @@ footer:
         - content: 参与贡献
           link: contribution
         - content: 案例学习
-          link: case
+          link: case/
         - content: 合作伙伴
-          link: partner
+          link: partner/
         - content: 版本计划
           link: https://github.com/kubesphere/kubesphere/blob/master/docs/roadmap.md
         - content: 中国站
