--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           hugo-version: '0.71.1'
           extended: true
 
-      - name: Build
+      - name: Build English Website
         run: hugo --environment upstream --minify
 
       - name: Build and Push image
@@ -30,4 +30,15 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: kubesphere/website
-          tags: latest
+          tags: v1.0-en
+
+      - name: Build Chinese Website
+        run: hugo --environment upstream-zh --minify
+
+      - name: Build and Push image
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: kubesphere/website
+          tags: v1.0-zh
