--- a/data/zh/head.yaml
+++ b/data/zh/head.yaml
@@ -1,3 +1,3 @@
-title: "KubeSphere | The Kubernetes platform tailored for hybrid multicloud"
-description: "KubeSphere is a distributed operating system managing cloud native applications with Kubernetes as its kernel, and provides plug-and-play architecture for the seamless integration of third-party applications to boost its ecosystem."
-keywords: "KubeSphere, Kubernetes, container platform, DevOps, hybrid cloud, cloud native"
+title: "KubeSphere | 面向云原生应用的容器混合云"
+description: "KubeSphere 是在 Kubernetes 之上构建的以应用为中心的多租户容器平台，提供全栈的 IT 自动化运维的能力，简化企业的 DevOps 工作流。KubeSphere 提供了运维友好的向导式操作界面，帮助企业快速构建一个强大和功能丰富的容器云平台。"
+keywords: "KubeSphere, Kubernetes, 容器平台, DevOps, 混合云"
