--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -114,9 +114,15 @@ name = "Community"
 
     [[languages.en.menu.main]]
     parent = "Community"
+    name = "News"
+    URL = "news/"
+    weight = 4
+
+    [[languages.en.menu.main]]
+    parent = "Community"
     name = "RoadMap"
     URL = "https://github.com/kubesphere/kubesphere/blob/master/docs/roadmap.md"
-    weight = 4
+    weight = 5
 
 [languages.zh]
 weight = 2
@@ -205,15 +211,21 @@ name = "开源社区"
 
     [[languages.zh.menu.main]]
     parent = "开源社区"
+    name = "动态"
+    URL = "news/"
+    weight = 4
+
+    [[languages.zh.menu.main]]
+    parent = "开源社区"
     name = "版本计划"
     URL = "https://github.com/kubesphere/kubesphere/blob/master/docs/roadmap.md"
-    weight = 4
+    weight = 5
 
     [[languages.zh.menu.main]]
     parent = "开源社区"
     name = "中国站"
     URL = "https://kubesphere.com.cn/"
-    weight = 5
+    weight = 6
 
 [[languages.zh.menu.main]]
 weight = 6
