--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -9,6 +9,7 @@ baseURL = "https://hugo-first.netlify.app"
 
 [params]
 logo = "images/logo.svg"
+snapshot = "/images/home/53.png"
 
 title = "KubeSphere | The Kubernetes platform tailored for hybrid multicloud"
 description = "KubeSphere is a distributed operating system managing cloud native applications with Kubernetes as its kernel, and provides plug-and-play architecture for the seamless integration of third-party applications to boost its ecosystem."
