--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -94,7 +94,7 @@ hasChildren = true
 [[languages.en.menu.main]]
 weight = 4
 name = "Documentation"
-URL = "docs/"
+URL = "https://kubesphere.io/docs/"
 
 [[languages.en.menu.main]]
 weight = 5
@@ -197,7 +197,7 @@ hasChildren = true
 [[languages.zh.menu.main]]
 weight = 4
 name = "文档中心"
-URL = "docs/"
+URL = "https://kubesphere.com.cn/docs/zh-CN/"
 
 [[languages.zh.menu.main]]
 weight = 5
@@ -312,31 +312,31 @@ hasChildren = true
   [[languages.tr.menu.main]]
   parent = "Kaynaklar"
   name = "Open Source Projeler"
-  URL = "projects/"
+  URL = "projects"
   weight = 1
 
   [[languages.tr.menu.main]]
   parent = "Kaynaklar"
   name = "KubeCon & QCon"
-  URL = "conferences/"
+  URL = "conferences"
   weight = 2
 
   [[languages.tr.menu.main]]
   parent = "Kaynaklar"
   name = "Blog Yazıları"
-  URL = "blogs/"
+  URL = "blogs"
   weight = 3
 
   [[languages.tr.menu.main]]
   parent = "Kaynaklar"
   name = "Videolar"
-  URL = "videos/"
+  URL = "videos"
   weight = 4
 
 [[languages.tr.menu.main]]
 weight = 4
 name = "Dokümantasyon"
-URL = "docs/"
+URL = "docs"
 
 [[languages.tr.menu.main]]
 weight = 5
