fix path and add code copy

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -12,6 +12,8 @@ logo = "images/logo.svg"
 
 githubUrl = "https://github.com/kubesphere/website"
 
+githubBlobUrl = "https://github.com/kubesphere/website/blob/master/content"
+
 githubEditUrl = "https://github.com/kubesphere/website/edit/master/content"
 
 mailchimpSubscribeUrl = "https://kubesphere.us10.list-manage.com/subscribe/post?u=c85ea2b944b08b951f607bdd4&id=83f673a2d9"
