add es, eu, turkey site in footer
Signed-off-by: FeynmanZhou <pengfeizhou@yunify.com>

--- a/data/zh/footer.yaml
+++ b/data/zh/footer.yaml
@@ -59,3 +59,11 @@ footer:
           link: https://kubesphere.com.cn/
         - content: 中文论坛
           link: https://kubesphere.com.cn/forum
+        - content: 全球站
+          link: https://kubesphere.io
+        - content: 欧洲站
+          link: https://kubesphere.eu
+        - content: 土耳其站
+          link: https://kubesphereturkey.com
+        - content: 西班牙站
+          link: https://kubesphere.es
