--- a/data/en/footer.yaml
+++ b/data/en/footer.yaml
@@ -54,5 +54,13 @@ footer:
           link: partner/
         - content: Roadmap
           link: https://github.com/kubesphere/kubesphere/blob/master/docs/roadmap.md
+        - content: Global Site
+          link: https://kubesphere.io
         - content: China Site
           link: https://kubesphere.com.cn/
+        - content: Europe Site
+          link: https://kubesphere.eu
+        - content: Turkey Site
+          link: https://kubesphereturkey.com
+        - content: Spain Site
+          link: https://kubesphere.es
