update defaul URL for documentation (v3.0.0)
Signed-off-by: FeynmanZhou <pengfeizhou@yunify.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -98,6 +98,30 @@ weight = 4
 name = "Documentation"
 URL = "https://kubesphere.io/docs/"
 
+    [[languages.en.menu.main]]
+    parent = "Documentation"
+    name = "v3.0.0"
+    URL = "https://kubesphere.io/docs"
+    weight = 1
+
+    [[languages.en.menu.main]]
+    parent = "Documentation"
+    name = "v2.1.x"
+    URL = "https://v2-1.docs.kubesphere.io/docs"
+    weight = 2
+
+    [[languages.en.menu.main]]
+    parent = "Documentation"
+    name = "v2.0.x"
+    URL = "https://v2-0.docs.kubesphere.io/docs/"
+    weight = 3
+
+    [[languages.en.menu.main]]
+    parent = "Documentation"
+    name = "v1.0.0"
+    URL = "https://v1-0.docs.kubesphere.io/docs/"
+    weight = 4
+
 [[languages.en.menu.main]]
 weight = 5
 hasChildren = true
@@ -198,8 +222,31 @@ hasChildren = true
 
 [[languages.zh.menu.main]]
 weight = 4
+hasChildren = true
 name = "文档中心"
-URL = "https://kubesphere.com.cn/docs/zh-CN/"
+    [[languages.zh.menu.main]]
+    parent = "文档中心"
+    name = "v3.0.0"
+    URL = "https://kubesphere.com.cn/docs"
+    weight = 1
+
+    [[languages.zh.menu.main]]
+    parent = "文档中心"
+    name = "v2.1.x"
+    URL = "https://v2-1.docs.kubesphere.io/docs/zh-CN/"
+    weight = 2
+
+    [[languages.zh.menu.main]]
+    parent = "文档中心"
+    name = "v2.0.x"
+    URL = "https://v2-0.docs.kubesphere.io/docs/zh-CN/"
+    weight = 3
+
+    [[languages.zh.menu.main]]
+    parent = "文档中心"
+    name = "v1.0.0"
+    URL = "https://v1-0.docs.kubesphere.io/docs/zh-CN/"
+    weight = 4
 
 [[languages.zh.menu.main]]
 weight = 5
