--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -96,12 +96,12 @@ hasChildren = true
 [[languages.en.menu.main]]
 weight = 4
 name = "Documentation"
-URL = "https://kubesphere.io/docs/"
+hasChildren = true
 
     [[languages.en.menu.main]]
     parent = "Documentation"
     name = "v3.0.0"
-    URL = "https://kubesphere.io/docs"
+    URL = "docs/"
     weight = 1
 
     [[languages.en.menu.main]]
@@ -227,7 +227,7 @@ name = "文档中心"
     [[languages.zh.menu.main]]
     parent = "文档中心"
     name = "v3.0.0"
-    URL = "https://kubesphere.com.cn/docs"
+    URL = "docs/"
     weight = 1
 
     [[languages.zh.menu.main]]
