--- a/data/zh/footer.yaml
+++ b/data/zh/footer.yaml
@@ -37,13 +37,13 @@ footer:
     - title: 文档中心
       list:
         - content: 产品介绍
-          link: '../../../zh/docs/introduction/what-is-kubesphere/'
+          link: '/docs/introduction/what-is-kubesphere/'
         - content: 如何安装
-          link: '../../../zh/docs/quick-start/all-in-one-on-linux/'
+          link: '/docs/quick-start/all-in-one-on-linux/'
         - content: 快速入门
-          link: '../../../zh/docs/quick-start/create-workspace-and-project/'
+          link: '/docs/quick-start/create-workspace-and-project/'
         - content: API 文档
-          link: '../../../docs/api-reference/api-docs/'
+          link: '/docs/reference/api-docs/'
 
     - title: 开源社区
       list:
