--- a/data/zh/footer.yaml
+++ b/data/zh/footer.yaml
@@ -20,9 +20,6 @@ footer:
         - content: 多云应用管理平台
           link: 'https://openpitrix.io/'
 
-        - content: Fluent-Bit 管理日志
-          link: 'https://github.com/kubesphere/fluentbit-operator'
-
     - title: 资源
       list:
         - content: 开源项目
@@ -67,3 +64,14 @@ footer:
           link: https://kubesphereturkey.com
         - content: 西班牙站
           link: https://kubesphere.es
+       
+    - title: 产品与服务
+      list:
+        - content: KubeSphere on AWS
+          link: 'https://aws.amazon.com/cn/quickstart/architecture/qingcloud-kubesphere/'
+        - content: KubeSphere on QingCloud(QKE)
+          link: 'https://www.qingcloud.com/products/kubesphereqke'
+        - content: 云原生应用服务平台
+          link: 'https://kubesphere.cloud'
+        - content: 业务合作与咨询
+          link: 'https://jinshuju.net/f/tPUldX'
