SEO with sitemap (#1262)
* SEO with sitemap

Signed-off-by: liuboaibc <kukudehero@gmail.com>

* update

Signed-off-by: liuboaibc <kukudehero@gmail.com>

* update config

Signed-off-by: liuboaibc <kukudehero@gmail.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -8,6 +8,7 @@ baseURL = "https://kubesphere-v3.netlify.app"
   [markup.goldmark.renderer]
     unsafe= true
 
+[Taxonomies]
 
 [params]
 logo = "images/logo.svg"
