--- a/config/upstream/config.toml
+++ b/config/upstream/config.toml
@@ -5,3 +5,4 @@ baseURL = "https://kubesphere.io"
 addGoogleAnalytics = true
 addGoogleTag = true
 hotjarTracking = true
+youtubeLink = "https://www.youtube.com/channel/UCyTdUQUYjf7XLjxECx63Hpw"
