--- a/data/zh/footer.yaml
+++ b/data/zh/footer.yaml
@@ -8,7 +8,7 @@ footer:
         - content: 在 K8s 运行微服务
           link: service-mesh/
 
-        - content: 构建云原生可观察性
+        - content: 构建云原生可观测性
           link: observability/
 
         - content: 物理机 K8s 暴露服务
