--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -103,27 +103,33 @@ hasChildren = true
 
     [[languages.en.menu.main]]
     parent = "Documentation"
-    name = "v3.0.0 <img src='/images/header/star.svg' alt='star'>"
-    URL = "docs/"
+    name = "v3.1.0 <img src='/images/header/star.svg' alt='star'>"
+    URL = "https://kubesphere.io/docs"
     weight = 1
+
+    [[languages.en.menu.main]]
+    parent = "Documentation"
+    name = "v3.0.0"
+    URL = "docs/"
+    weight = 2
 
     [[languages.en.menu.main]]
     parent = "Documentation"
     name = "v2.1.x"
     URL = "https://v2-1.docs.kubesphere.io/docs"
-    weight = 2
+    weight = 3
 
     [[languages.en.menu.main]]
     parent = "Documentation"
     name = "v2.0.x"
     URL = "https://v2-0.docs.kubesphere.io/docs/"
-    weight = 3
+    weight = 4
 
     [[languages.en.menu.main]]
     parent = "Documentation"
     name = "v1.0.0"
     URL = "https://v1-0.docs.kubesphere.io/docs/"
-    weight = 4
+    weight = 5
 
 [[languages.en.menu.main]]
 weight = 5
@@ -227,29 +233,36 @@ hasChildren = true
 weight = 4
 hasChildren = true
 name = "文档中心"
+
     [[languages.zh.menu.main]]
     parent = "文档中心"
-    name = "v3.0.0 <img src='/images/header/star.svg' alt='star'>"
-    URL = "docs/"
+    name = "v3.1.0 <img src='/images/header/star.svg' alt='star'>"
+    URL = "https://kubesphere.io/zh/docs/"
     weight = 1
+
+    [[languages.zh.menu.main]]
+    parent = "文档中心"
+    name = "v3.0.0"
+    URL = "docs/"
+    weight = 2
 
     [[languages.zh.menu.main]]
     parent = "文档中心"
     name = "v2.1.x"
     URL = "https://v2-1.docs.kubesphere.io/docs/zh-CN/"
-    weight = 2
+    weight = 3
 
     [[languages.zh.menu.main]]
     parent = "文档中心"
     name = "v2.0.x"
     URL = "https://v2-0.docs.kubesphere.io/docs/zh-CN/"
-    weight = 3
+    weight = 4
 
     [[languages.zh.menu.main]]
     parent = "文档中心"
     name = "v1.0.0"
     URL = "https://v1-0.docs.kubesphere.io/docs/zh-CN/"
-    weight = 4
+    weight = 5
 
 [[languages.zh.menu.main]]
 weight = 5
