add version tip
Signed-off-by: liuboaibc <kukudehero@gmail.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -13,6 +13,9 @@ enableRobotsTXT = true
 [Taxonomies]
 
 [params]
+
+version = "v3.0.0"
+
 logo = "images/logo.svg"
 
 githubUrl = "https://github.com/kubesphere/website"
