add linkedin script
Signed-off-by: liuboaibc <kukudehero@gmail.com>

--- a/config/upstream/config.toml
+++ b/config/upstream/config.toml
@@ -6,3 +6,4 @@ addGoogleAnalytics = true
 addGoogleTag = true
 hotjarTracking = true
 youtubeLink = "https://www.youtube.com/channel/UCyTdUQUYjf7XLjxECx63Hpw"
+addLinkedin = true
