add twitter tag
Signed-off-by: liuboaibc <kukudehero@gmail.com>

--- a/config/upstream/config.toml
+++ b/config/upstream/config.toml
@@ -7,3 +7,4 @@ addGoogleTag = true
 hotjarTracking = true
 youtubeLink = "https://www.youtube.com/channel/UCyTdUQUYjf7XLjxECx63Hpw"
 addLinkedin = true
+addTwitter = true
