--- a/data/zh/footer.yaml
+++ b/data/zh/footer.yaml
@@ -17,6 +17,9 @@ footer:
         - content: K8s 一键部署与运维
           link: 'https://github.com/kubesphere/kubekey'
 
+        - content: 构建 FaaS 平台与 Serverless 架构
+          link: 'https://github.com/OpenFunction/OpenFunction'
+
         - content: 多云应用管理平台
           link: 'https://openpitrix.io/'
 
@@ -65,6 +68,8 @@ footer:
       list:
         - content: KubeSphere on AWS
           link: 'https://aws.amazon.com/cn/quickstart/architecture/qingcloud-kubesphere/'
+        - content: KubeSphere on Azure
+          link: 'https://market.azure.cn/marketplace/apps/qingcloud.kubesphere'
         - content: KubeSphere on QingCloud(QKE)
           link: 'https://www.qingcloud.com/products/kubesphereqke'
         - content: 云原生应用服务平台
