update the footer
Signed-off-by: faweizhao26 <faweizhao@kubesphere.io>

--- a/data/zh/footer.yaml
+++ b/data/zh/footer.yaml
@@ -76,5 +76,5 @@ footer:
           link: 'https://kubesphere.cloud'
         - content: 技术支持服务
           link: 'https://kubesphere.cloud/ticket/'
-        - content: 商业版业务合作与咨询
+        - content: 了解商业版与咨询合作
           link: 'https://jinshuju.net/f/tPUldX'
