--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -103,7 +103,7 @@ hasChildren = true
 
     [[languages.en.menu.main]]
     parent = "Documentation"
-    name = "v3.1.0 <img src='/images/header/star.svg' alt='star'>"
+    name = "v3.1.x <img src='/images/header/star.svg' alt='star'>"
     URL = "docs/"
     weight = 1
 
@@ -235,7 +235,7 @@ hasChildren = true
 name = "文档中心"
     [[languages.zh.menu.main]]
     parent = "文档中心"
-    name = "v3.1.0 <img src='/images/header/star.svg' alt='star'>"
+    name = "v3.1.x <img src='/images/header/star.svg' alt='star'>"
     URL = "docs/"
     weight = 1
 
