--- a/data/en/footer.yaml
+++ b/data/en/footer.yaml
@@ -63,6 +63,8 @@ footer:
           link: 'https://aws.amazon.com/quickstart/architecture/qingcloud-kubesphere/'
         - content: KubeSphere on Azure
           link: 'https://market.azure.cn/marketplace/apps/qingcloud.kubesphere'
+        - content: KubeSphere on DigitalOcean
+          link: 'https://marketplace.digitalocean.com/apps/kubesphere'
         - content: KubeSphere on QingCloud(QKE)
           link: 'https://www.qingcloud.com/products/kubesphereqke'
         - content: KubeSphere Virtualization Platform
