Add summer 2021 github link to the official website
Signed-off-by: honglei <hongleishen@hotmail.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -324,6 +324,12 @@ name = "开源社区"
     URL = "https://github.com/kubesphere/community/blob/master/sig-advocacy-and-outreach/summer-ospp/README_zh-CN.md"
     weight = 7
 
+    [[languages.zh.menu.main]]
+    parent = "开源社区"
+    name = "暑期 2021"
+    URL = "https://github.com/kubesphere/community/blob/master/sig-advocacy-and-outreach/summer-ospp/README_zh-CN.md"
+    weight = 7
+
 [[languages.zh.menu.main]]
 weight = 6
 name = "用户论坛"
