Summer 2021 of OSPP
Signed-off-by: honglei <hongleishen@hotmail.com>

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -169,7 +169,7 @@ name = "Community"
 
     [[languages.en.menu.main]]
     parent = "Community"
-    name = "Summer 2021"
+    name = "Summer 2021 of OSPP"
     URL = "https://github.com/kubesphere/community/blob/master/sig-advocacy-and-outreach/summer-ospp/README.md"
     weight = 6
 
